2001-03-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* keyvalue.cc: ignore certain lock errors.
	* Makefile.am: install modules into pkglibdir/version dir.

2001-03-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: add \n to connect: message.
	* HttpDir.cc: do Exclude.
	* commands.cc: update help for `module'.
	* module.cc: search modules in module:path.
	* resource.cc: init module:path from env LFTP_MODULE_PATH.

2001-03-13  Arkadiusz Miskiewicz <misiek@pld.org.pl>

	* Job.cc, Job.h: undef printf (for new glibc).

2001-03-13  Glenn F. Maynard <glenn@zewt.org>

	* CmdExec.cc, CmdExec.h, StatusLine.cc, StatusLine.h: support for
	  terminal titlebar.

2001-02-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: (MakePrompt) fix \NNN recognition (reported by
	  Glenn F. Maynard)

2001-02-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: accept perms string 11 char long.
	* misc.cc: accept last + in perms string as ACL tag.
	* commands.cc: open command file in ascii mode.
	* Fish.cc, Http.cc, NetAccess.cc, NetAccess.h, ftpclass.cc:
	  create RateLimit with closure.

2001-02-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: fix rare spinning when parent process terminates.
	* ftpclass.cc: don't bind data socket to loopback address.

2001-02-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* url.cc: fix Combine when proto==NULL.

2001-02-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc, FileFeeder.cc, Filter.cc, Http.cc, LocalAccess.cc,
	  ProcWait.cc, buffer.cc, ftpclass.cc, keyvalue.cc: use E_RETRY macro.
	* FileCopy.h: drop size information if pos>size.

2001-01-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: print error to debug output from Http::Read.
	* Job.cc: add timeout when displaying status of several jobs in cycle.
	* pgetJob.cc: more space in status line for eta.

2001-01-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix opie/skey reply.